# Object-Oriented-C

./: CMakeLists.txt  Example.c  Example.h  Example.r  OOCLib.h  Object.c  Object.h  Object.r  Particle.c  Particle.h  Particle.r  Person.c  Person.h  Person.r  Point.c  Point.h  Point.r  README.md  Test.c  bool.h  main.c
OOC Library/: Doc.txt  OOCP.h  OOC_Essentials.h  OOC_Preprocessor.h  Object.c  Object.h  Object.r
OOC Library/Utilities/: ArrayList.c  ArrayList.h  ArrayList.r  ArrayQueue.c  ArrayQueue.h  ArrayQueue.r  ArrayStack.c  ArrayStack.h  ArrayStack.r  BinaryTreeNode.c  BinaryTreeNode.h  BinaryTreeNode.r  LinkedList.c  LinkedList.h  LinkedList.r  LinkedNode.c  LinkedNode.h  LinkedQueue.c  LinkedQueue.h  LinkedQueue.r  LinkedStack.c  LinkedStack.h  LinkedStack.r  List.c  List.h  List.r  Queue.c  Queue.h  Queue.r  Stack.c  Stack.h  Stack.r  String.c  String.h  String.r
OOC Library/Wrappers/: Bool.c  Bool.h  Bool.r  Char.c  Char.h  Char.r  Class.c  Class.h  Class.r  Double.c  Double.h  Double.r  Float.c  Float.h  Float.r  Int.c  Int.h  Int.r  Long.c  Long.h  Long.r  LongDouble.c  LongDouble.h  LongDouble.r  LongLong.c  LongLong.h  LongLong.r  Pointer.c  Pointer.h  Pointer.r  PrimWrapper.c  PrimWrapper.h  PrimWrapper.r  Ptr.c  Ptr.h  Ptr.r  Short.c  Short.h  Short.r  Struct.c  (+5 more)
